# Bolometric_Modelling

./: README.md  requirements.txt  setup.cfg  setup.py  tests.py
bolometric_modelling/: Bolometric_Functions.py  SNs.py  __main__.py  bolometric_lightcurve.py  main.py  models.py  plotting.py  utils.py
