[metadata]
name = Bolometric_Modelling
version = 0.0.0
author = Tom Ben-Ami
author_email = author@example.com
description = An analysis tool for modelling bolometric lightcurves of supernovae
long_description = file: README.md
long_description_content_type = text/markdown
url = https://github.com/Tomariebenami/Bolometric_Modelling
project_urls =
    Bug Tracker = https://github.com/Tomariebenami/Bolometric_Modelling/issues
classifiers =
    Programming Language :: Python :: 3
    License :: OSI Approved :: GNU License
    Operating System :: OS Independent

[options]
package_dir =
    = src
packages = find:
python_requires = >=3.6

[options.packages.find]
where = src